fix: fixed spacings

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ a {
 :root {
   --greenbg: #1abc9c;
   --darkbg: #2c3d50;
+  --bs-btn-bg: #1abc9c;
 }
 
 body {
@@ -12,6 +13,12 @@ body {
 }
 
 /* UTILS */
+
+button {
+  background-color: var(--greenbg);
+  color: white;
+  border: 1px solid white;
+}
 
 /* DIVISORE STELLA */
 .line {
@@ -61,16 +68,13 @@ header nav {
 }
 
 .big-nav {
-  display: none;
+  display: none !important;
 }
 
 .burger-menu {
   background: none;
-  border: 2px solid white;
-  border-radius: 5px;
   height: 30px;
   width: 30px;
-  text-align: center;
   color: rgba(255, 255, 255, 0.4);
 }
 
@@ -118,4 +122,19 @@ ul li {
 li a {
   line-height: 60px;
   color: white;
+}
+
+.copyright {
+  background-color: #2c3d50;
+}
+
+/* MEDIA QUERY */
+
+@media all and (min-width: 768px) {
+  .small-menu {
+    display: none;
+  }
+  .big-nav {
+    display: block !important;
+  }
 }
